namespace App.Game.Colors
{
    public interface IColor
    {
        ColorType ColorType {get;}
    }
}