namespace App.Game.Damages
{
    public interface IDamageable
    {
        void ApplyDamage(Damage damage);
    }
}