namespace App.Game.Enemies
{
    public enum EnemyType
    {
        Kuribou
    }
}