namespace App.Game.Gatewaies
{
    public class UserDataGateWay
    {
        
    }
}