using UnityEngine;

namespace App.Game.Gimmicks
{
    public class ColorBlock : MonoBehaviour
    {

    }
}