namespace App.Game.Healths
{
    public interface IHealth
    {
        float MaxHitPoint { get; }
        float HitPoint { get; }
    }
}