namespace App.Game.Managers
{
    public enum GameState
    {
        Initialize,
        GameUpdate,
        Result
    }
}