using UnityEngine;

namespace App.Game.Stages
{
    public class StageCamera : MonoBehaviour
    {
        
    }
}