namespace App.Game.Stages
{
    public enum StageType
    {
        Stage1,
        Stage2
    }
}